Fri May  7 09:38:06 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/Mutex.h:

	  Fixed doxygen documentation.

	  Removed "ace/Log_Msg.h" include.  It isn't needed in this
	  header.

	* ace/Mutex.cpp:

	  Include "ace/Log_Msg.h" to pull in ACE_ERROR macros.

Fri May  7 08:08:05 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Reverted my change from Thu May  6 12:16:16 2004.  It can cause
          problems when all the generated files are present, but are
          out-of-date.

Fri May  7 12:15:33 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config*.h:
          Removed setting of ACE_NTRACE to 1 when it is not set, this is
          already done in config-all.h, so there is no need to do it
          in each config file seperately.

Fri May  7 09:48:32 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/build_example.bor:
          Removed this file, with the MPC transition we don't use it anymore

Fri May  7 09:11:21 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_Export.h:
          Removed this file, with the rework in ACE_OS the ACE_OS_Export has
          been deprecated and not used. This file is only used in the ACE
          library itself and not by users, so it is safe to remove this.
          This fixes bugid 1700.

        * ace/ace.mpc:
        * ace/config-win32-ghs.h:
          Removed usage of ACE_OS_BUILD_DLL and ACE_OS_HAS_DLL

Thu May  6 22:15:14 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * bin/MakeProjectCreator/config/taoidldefaults.mpb:
        * include/makeinclude/wrapper_macros.GNU:

          ".inl" is now the default TAO_IDL generated stub/skeleton inline
          file extension instead of ".i".  The latter is generally used
          for preprocessed C sources.  Updated these files accordingly.

Thu May 7 02:00:00 2004  Marek Brudka  <mbrudka@elka.pw.edu.pl>
